fix: Space between the nav bar and the expanded nav links on small devices.

--- a/src/output.css
+++ b/src/output.css
@@ -210,6 +210,12 @@
   .static {
     position: static;
   }
+  .top-15 {
+    top: calc(var(--spacing) * 15);
+  }
+  .top-19 {
+    top: calc(var(--spacing) * 19);
+  }
   .top-20 {
     top: calc(var(--spacing) * 20);
   }
@@ -240,6 +246,9 @@
       max-width: 96rem;
     }
   }
+  .m-0 {
+    margin: calc(var(--spacing) * 0);
+  }
   .mx-5 {
     margin-inline: calc(var(--spacing) * 5);
   }
@@ -248,6 +257,9 @@
   }
   .my-7 {
     margin-block: calc(var(--spacing) * 7);
+  }
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
   }
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
